# reflex

./: .gitmodules  CMakeLists.txt  README.md
reflex/: CMakeLists.txt  access_guard.hpp  any.hpp  const_string.hpp  delegate.hpp  facet.hpp  object.cpp  object.hpp  object.ipp  type_database.hpp  type_info.hpp  type_name.hpp  utility.hpp
reflex/detail/: CMakeLists.txt  any.cpp  any.hpp  any.ipp  api.hpp  arg_info.hpp  data.hpp  database.cpp  database.hpp  database.ipp  define.hpp  exceptions.cpp  facet.cpp  facet.hpp  factory.cpp  factory.hpp  factory.ipp  fwd.hpp  info.cpp  info.hpp  info.ipp  object.cpp  object.hpp  pointer_facet.hpp  query.cpp  query.hpp  query.ipp  range_facet.hpp  spinlock.cpp  spinlock.hpp  spinlock.ipp  static_string.hpp  string_facet.hpp  tuple_facet.hpp  type_data.cpp  type_data.hpp  type_db.cpp  type_db.hpp  type_db_impl.hpp  type_domain.cpp  (+7 more)
reflex/detail/facets/: CMakeLists.txt  compare.hpp  pointer.hpp  range.hpp  string.hpp  tuple.hpp
test/: CMakeLists.txt  common.hpp  main.cpp  test_database.cpp  test_delegate.cpp  test_enum.cpp  test_object.cpp  test_pointer.cpp  test_string.cpp  test_tuple.cpp
